# NCOS-Assistant

./: .gitignore  Cargo.toml  README.md  justfile
data/: io.github.exothermic88.ncos-assistant.desktop
docs/: Installation.md  Pre-Install.md  home.md  ncos-overview.md  ncos-repo.md  release-notes.md  shortcuts.md  update.md
packaging/: PKGBUILD
src/: app.rs  config.rs  main.rs  ollama.rs
src/rag/: chunker.rs  index.rs  mod.rs
src/ui/: chat.rs  settings.rs
